# Zeyad-Test

./: .gitignore  README.md  adder_8h.html  adder_8h.js  adder_8h_source.html  devel.txt  files.html  files_dup.js  git-cheat-sheet.txt  globals.html  globals_func.html  hi_and_date.cmd  index.html  main.txt  navtreedata.js  navtreeindex0.js
.github/workflows/: doxygen-deploy.yml
Worksheet5/: CMakeLists.txt  Doxyfile  adder.cpp  adder.h  calc.cpp
search/: all_0.js  files_0.js  functions_0.js
worksheet3/: adder.cpp  adder.h
worksheet4/calc/: CMakeLists.txt  adder.cpp  adder.h
worksheet4/hello_cmake/: CMakeLists.txt  hello.cpp
